<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndoorPositioning"
    android:background="@drawable/background"
    >

    <!--The following textview contains "Search by book name:" text.-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv"
        android:id="@+id/textView"
        android:layout_marginTop="30dp"
        android:textColor="#020000"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <!--The following textview contains "Search by author name:" text.-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv3"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="20dp"
        android:textColor="#020000" />

    <!--The following textview contains "Search by call number:" text.-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv2"
        android:id="@+id/textView3"
        android:layout_marginTop="88dp"
        android:textColor="#030000"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp" />

    <!--The following textview contains "Search by ISBN:" text.-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv4"
        android:id="@+id/textView4"
        android:layout_below="@+id/editTextThree"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="35dp"
        android:textColor="#000000" />

    <!--The following AutoCompleteTextView is associated with "Search by book name:"-->
    <AutoCompleteTextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/editText"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:background="#ffffff"
        android:layout_marginLeft="12dp"
        android:inputType="text"
        android:textColor="#030000"
        android:maxLength="50" >
    </AutoCompleteTextView>

    <!--The following AutoCompleteTextView is associated with "Search by author name:"-->
    <AutoCompleteTextView
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:id="@+id/editTextTwo"
        android:background="#ffffff"
        android:inputType="text"
        android:textColor="#030000"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginLeft="5dp"
        android:maxLength="40" >
    </AutoCompleteTextView>

    <!--The following AutoCompleteTextView is associated with "Search by call number:"-->
    <AutoCompleteTextView
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:id="@+id/editTextThree"
        android:background="#ffffff"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginLeft="4dp"
        android:textColor="#030000"
        android:maxLength="10"
        android:inputType="text" >
    </AutoCompleteTextView>

    <!--The following AutoCompleteTextView is associated with "Search by ISBN:"-->
    <AutoCompleteTextView
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:id="@+id/editTextFour"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:textColor="#030000"
        android:background="#ffffff"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginLeft="10dp"
        android:inputType="number"
        android:maxLength="13" >
    </AutoCompleteTextView>

    <!--The following is an imagebutton for Indoor Positioning System-->
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonTwo"
        android:src="@drawable/booklocation"
        android:contentDescription="@string/ips"
        android:background="?android:selectableItemBackground"
        android:onClick="displayBookLocation"
        android:layout_alignBottom="@+id/imageButtonThree"
        android:layout_alignLeft="@+id/editTextTwo"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="-60dp"
        android:layout_toEndOf="@id/editTextFour" />

    <!--The following is an imagebutton for book information-->
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@drawable/book_information"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/bi"
        android:onClick="displayBookInformation"
        android:layout_alignBottom="@+id/imageButtonTwo"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_toEndOf="@id/editTextFour"
        android:nestedScrollingEnabled="false" />

    <!--The following is an imagebutton for GPS-->
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonFour"
        android:src="@drawable/librarylocation"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/gps"
        android:onClick="displayLibraryLocation"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_marginLeft="-67dp"
        android:layout_alignParentStart="false"
        android:layout_alignLeft="@+id/editTextTwo"
        android:layout_marginTop="-10dp" />

    <!--The following is an imagebutton for reset.-->
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonThree"
        android:src="@drawable/reset"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/reset"
        android:onClick="reset"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/imageButtonFour"
        android:layout_alignRight="@+id/editTextFour"
        android:layout_alignEnd="@+id/editTextFour" />

</RelativeLayout>
